SW-7868 Fixed: Button whitespace

--- a/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/checkout.less
+++ b/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/checkout.less
@@ -386,6 +386,10 @@
 			}
 		}
 
+        .table--actions {
+            .unitize-padding(20, 0, 10);
+        }
+
 		// Basic layout
 		.table--row {
 			.unitize-padding(10, 0, 10, 0);
